Added a signup button with a registration form with links from home and signup page that works both ways.
Added some styling for the signup button I added in your style.css file. I also made a few adjustments in your YourLife.html file for the formatting of the Login/Signup functionality. Hope its all good with you.

--- a/YourLife.html
+++ b/YourLife.html
@@ -15,19 +15,18 @@
 <body>
     <!-- Nav Bar -->
     <nav class="shadow navbar navbar-expand-lg navbar-dark navbar-custom">
-        <a class="navbar-brand" href="">
-            <i class="fas fa-heartbeat fa-beat" style="padding-right: 7%; color:#E35D4F; "></i>YourLife</a>
+        <a class="navbar-brand" href="YourLife.html">
+            <i class="fas fa-heartbeat fa-beat" style="padding-right: 7%; color:#E35D4F; "></i><em>YourLife</em></a>
+                <a class="signupButton" href="SignUp.html"><strong>Sign Up!</strong></a>
         </div>
     </nav>
     <!-- Nav Bar -->
     <!-- Body Section -->
     <section class="body-section">
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
-    </section>
-    <!-- End of Body Section -->
-
-    <section class="Calculator-form">
+        <h1>Welcome to YourLife!</h1>
+        <br>
+        <p>Here we calculate your caloric maintenance level and determine what amount of food you should be eating depending on your fitness goals. Give it a try.</p>
+            <section class="Calculator-form">
         <h3>Mifflin-St Jeor Formula Calculator</h3>
         <form class="form" id="form" onsubmit="">
             <div class="row-one">
@@ -50,6 +49,7 @@
                 <input type="text" class="text-input" id="weight" autocomplete="off" required>
                 <p class="text">Weight (kg)</p>
             </div>
+            <br>
             <div class="row-four">
                 Activity Level:
                 <select id="activityLevel" name="activityLevel">
@@ -65,8 +65,9 @@
     <div class="footer">
         <p>© 2021 YourLife</p>
     </div>
+    </section>
 
-
+    <!-- End of Body Section -->
 
 </body>
 
